<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <com.example.murali.alpha.cache.SmartImageView
                android:id="@+id/user_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/just"
                android:scaleType="fitCenter"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp">

                <TextView
                    android:id="@+id/user_name"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"/>
                <TextView
                    android:id="@+id/time_stamp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_12_53_am"
                    />
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:id="@+id/user_posts_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:text="@string/whether_you_re_looking_for_a_waterproof_phone_the_longest_battery_life_or_a_low_light_camera_there_s_an_android_phone_for_you"/>

    </LinearLayout>


</LinearLayout>